Split CL and EL minimal node (#2115)

--- a/grandine-allin1.yml
+++ b/grandine-allin1.yml
@@ -45,7 +45,7 @@ services:
       - W3S_NODE=${W3S_NODE}
       - DOPPELGANGER=${DOPPELGANGER:-false}
       - ARCHIVE_NODE=${CL_ARCHIVE_NODE:-false}
-      - MINIMAL_NODE=${MINIMAL_NODE:-true}
+      - CL_MINIMAL_NODE=${CL_MINIMAL_NODE:-true}
       - IPV6=${IPV6:-false}
       - CL_P2P_PORT=${CL_P2P_PORT:-9000}
       - CL_QUIC_PORT=${CL_QUIC_PORT:-9001}
