--- a/default.env
+++ b/default.env
@@ -165,9 +165,12 @@ EL_ARCHIVE_NODE=false
 # This may also keep all blobs, depending on client
 # For a more granular way to handle it, please use CL_EXTRAS instead
 CL_ARCHIVE_NODE=false
+# Set this to true to sync a minimal CL node - in use with Grandine and Teku, for example
+# CL_ARCHIVE_NODE must be false for this to take effect
+CL_MINIMAL_NODE=true
 # Set this to true to sync a node that does not carry all historical data, see EIP-4444
 # EL_ARCHIVE_NODE must be false for this to take effect
-MINIMAL_NODE=true
+EL_MINIMAL_NODE=false
 
 # If you want debug logs, set this to debug instead of info
 LOG_LEVEL=info
