Lido VERSION becomes TAG

--- a/default.env
+++ b/default.env
@@ -217,14 +217,15 @@ SSV_DKG_TAG=latest
 SSV_DKG_REPO=ssvlabs/ssv-dkg
 
 # Lido OBOL
-CHARON_VERSION=latest
+CHARON_TAG=latest
 VE_OPERATOR_ID=
 VE_STAKING_MODULE_ID=
 VE_LOCATOR_ADDRESS=
 VE_ORACLE_ADDRESSES_ALLOWLIST=
 ENABLE_DIST_ATTESTATION_AGGR=
 LIDO_DV_EXIT_EXIT_EPOCH=
-LIDO_DV_EXIT_VERSION=
+LIDO_DV_EXIT_TAG=latest
+VALIDATOR_EJECTOR_TAG=1.7.0
 
 # EthPandaOps Contributoor
 CONTRIBUTOOR_DOCKER_REPO=ethpandaops/contributoor
@@ -378,4 +379,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=30
+ENV_VERSION=31
