--- a/erigon.yml
+++ b/erigon.yml
@@ -53,7 +53,7 @@ services:
       default:
         aliases:
           - eth1
-          - ${NETWORK}-execution # This allows multiple Eth Docker stacks all connected to the same central traefik
+          - ${EL_ALIAS:-${NETWORK}-execution} # This allows multiple Eth Docker stacks all connected to the same bridge network
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
