--- a/default.env
+++ b/default.env
@@ -185,11 +185,16 @@ EL_NODE=http://execution:8551
 # or could just be a remote consensus client URL for "validator only" setups.
 CL_NODE=http://consensus:5052
 # MEV-boost address. This would only be changed for Vouch setups
-MEV_NODE=http://mev-boost:18550
-# Web3signer address
-W3S_NODE=http://web3signer:9000
+MEV_NODE=http://${MEV_ALIAS}:18550
 # Used by "ethd keys", adjust this if you have multiple Eth Docker stacks connected to the same Docker bridge network
 VC_ALIAS=vc
+# For a Vero N of M, set aliases for CL, EL, MEV and Web3signer to distinguish the different stacks
+W3S_ALIAS=${NETWORK}-web3signer
+CL_ALIAS=${NETWORK}-consensus
+EL_ALIAS=${NETWORK}-execution
+MEV_ALIAS=${NETWORK}-mev
+# Web3signer address - match service name or alias, or it can be remote
+W3S_NODE=http://web3signer:9000
 # Consensus client addresses for Charon in Obol setup
 OBOL_CHARON_CL_ENDPOINTS=http://consensus:5052
 # Consensus client address for Lido DV Exit and Lido Validator Ejector services in Obol setup
