--- a/nimbus-allin1.yml
+++ b/nimbus-allin1.yml
@@ -56,6 +56,7 @@ services:
       default:
         aliases:
           - eth2
+          - ${CL_ALIAS:-${NETWORK}-consensus} # This allows multiple Eth Docker stacks all connected to the same bridge network
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
