--- a/web3signer.yml
+++ b/web3signer.yml
@@ -27,7 +27,7 @@ services:
     networks:
       default:
         aliases:
-          - ${NETWORK}-web3signer # This allows multiple Eth Docker stacks all connected to the same central traefik
+          - ${W3S_ALIAS:-${NETWORK}-web3signer} # This allows multiple Eth Docker stacks all connected to the same bridge network
     depends_on:
       postgres:
         condition: service_healthy
