Add postgres alias

--- a/default.env
+++ b/default.env
@@ -189,6 +189,7 @@ MEV_NODE=http://${MEV_ALIAS}:18550
 VC_ALIAS=vc
 # For a Vero N of M, set aliases for CL, EL, MEV and Web3signer to distinguish the different stacks
 W3S_ALIAS=${NETWORK}-web3signer
+PG_ALIAS=${NETWORK}-postgres
 CL_ALIAS=${NETWORK}-consensus
 EL_ALIAS=${NETWORK}-execution
 MEV_ALIAS=${NETWORK}-mev
