--- a/default.env
+++ b/default.env
@@ -3,9 +3,9 @@
 COMPOSE_FILE=teku.yml:besu.yml:deposit-cli.yml
 # Set the ETH address that priority fees and MEV rewards should be sent to
 FEE_RECIPIENT=
-# Decide whether to connect the CL to Flashbots MEV boost, and configure the VC to register with it.
-# Set MEV_BOOST to "true" for MEV boost, or any other value including empty for not using MEV boost.
-# If "true" and used with a CL, it also requires :mev-boost.yml in COMPOSE_FILE
+# Decide whether to connect the CL to Commit Boost or Flashbots MEV Boost, and configure the VC to register with it.
+# Set MEV_BOOST to "true" to use it, or any other value including empty for not using external builders.
+# If "true" and used with a CL, it also requires :mev-boost.yml or :commit-boost-pbs.yml in COMPOSE_FILE
 MEV_BOOST=false
 # For relay information, please see https://ethstaker.cc/mev-relay-list/
 MEV_RELAYS="
@@ -185,8 +185,6 @@ EL_NODE=http://execution:8551
 # Consensus client address. This could be comma-separated for Lighthouse, Nimbus or Teku VC clients, with failover,
 # or could just be a remote consensus client URL for "validator only" setups.
 CL_NODE=http://consensus:5052
-# MEV-boost address. This would only be changed for Vouch setups
-MEV_NODE=http://${MEV_ALIAS}:18550
 # Used by "ethd keys", adjust this if you have multiple Eth Docker stacks connected to the same Docker bridge network
 VC_ALIAS=vc
 # For a Vero N of M, set aliases for CL, EL, MEV and Web3signer to distinguish the different stacks
@@ -195,6 +193,8 @@ PG_ALIAS=${NETWORK}-postgres
 CL_ALIAS=${NETWORK}-consensus
 EL_ALIAS=${NETWORK}-execution
 MEV_ALIAS=${NETWORK}-mev
+# MEV-boost address. This would only be changed for Vouch setups
+MEV_NODE=http://${MEV_ALIAS}:18550
 # Web3signer address - match service name or alias, or it can be remote
 W3S_NODE=http://web3signer:9000
 # Consensus client addresses for Charon in Obol setup
@@ -382,4 +382,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=31
+ENV_VERSION=32
