Make web3signer heap configurable

--- a/default.env
+++ b/default.env
@@ -154,6 +154,8 @@ VC_EXTRAS=
 # to 8g. If left empty, the defaults in besu.yml and teku.yml are used.
 BESU_HEAP=
 TEKU_HEAP=
+# Heap for Web3signer. Defaults to -Xmx4g; -Xmx2g should also work in many setups
+W3S_HEAP=
 # Heap for Lodestar. Sets NODE_OPTIONS to this value, for example --max-old-space-size=8192.
 # If left empty, the default in lodestar.yml will be used.
 LODESTAR_HEAP=
@@ -382,4 +384,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=32
+ENV_VERSION=33
