--- a/web3signer.yml
+++ b/web3signer.yml
@@ -22,7 +22,7 @@ services:
       - web3signer-keys:/var/lib/web3signer
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - JAVA_OPTS=-Xmx2g
+      - JAVA_OPTS=${W3S_HEAP:--Xmx4g}
       - NETWORK=${NETWORK}
       - PG_ALIAS=${PG_ALIAS:-${NETWORK}-postgres}
     networks:
