fix: missed `OBOL_P2P_EXTERNAL_HOSTNAME` in `default.env`

--- a/default.env
+++ b/default.env
@@ -91,6 +91,8 @@ SHARE_IP=
 
 # Relays to connect charon node
 OBOL_P2P_RELAYS=
+# External hostname or IP for P2P connections in Charon. Empy by default to avoid warnings.
+OBOL_P2P_EXTERNAL_HOSTNAME=
 
 # External Docker network if using ext-network.yml
 DOCKER_EXT_NETWORK=rocketpool_net
@@ -384,4 +386,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=33
+ENV_VERSION=34
