feat: add `OBOL_CHARON_NICKNAME`

--- a/default.env
+++ b/default.env
@@ -93,6 +93,8 @@ SHARE_IP=
 OBOL_P2P_RELAYS=
 # External hostname or IP for P2P connections in Charon. Empy by default to avoid warnings.
 OBOL_P2P_EXTERNAL_HOSTNAME=
+# Allows operators to set human readable nicknames in monitoring. Works from v1.3.0 only
+OBOL_CHARON_NICKNAME=
 
 # External Docker network if using ext-network.yml
 DOCKER_EXT_NETWORK=rocketpool_net
