--- a/default.env
+++ b/default.env
@@ -91,9 +91,9 @@ SHARE_IP=
 
 # Relays to connect charon node
 OBOL_P2P_RELAYS=
-# External hostname or IP for P2P connections in Charon. Empy by default to avoid warnings.
+# External hostname or IP for P2P connections in Charon. Empty by default
 OBOL_P2P_EXTERNAL_HOSTNAME=
-# Allows operators to set human readable nicknames in monitoring. Works from v1.3.0 only
+# Allows operators to set human readable nicknames in monitoring. Works from v1.3.0 only. Empty by default
 OBOL_CHARON_NICKNAME=
 
 # External Docker network if using ext-network.yml
