--- a/default.env
+++ b/default.env
@@ -91,6 +91,10 @@ SHARE_IP=
 
 # Relays to connect charon node
 OBOL_P2P_RELAYS=
+# External hostname or IP for P2P connections in Charon. Empty by default
+OBOL_P2P_EXTERNAL_HOSTNAME=
+# Allows operators to set human readable nicknames in monitoring. Works from v1.3.0 only. Empty by default
+OBOL_CHARON_NICKNAME=
 
 # External Docker network if using ext-network.yml
 DOCKER_EXT_NETWORK=rocketpool_net
@@ -384,4 +388,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=33
+ENV_VERSION=34
