--- a/default.env
+++ b/default.env
@@ -284,7 +284,7 @@ SIREN_DOCKER_REPO=sigmaprime/siren
 # Prysm
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 PRYSM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
-PRYSM_SRC_REPO=https://github.com/prysmaticlabs/prysm
+PRYSM_SRC_REPO=https://github.com/OffchainLabs/prysm
 PRYSM_DOCKER_TAG=stable
 PRYSM_DOCKER_VC_TAG=stable
 PRYSM_DOCKER_CTL_TAG=latest
