Revert "Aliases do not use variables (#2170)"
This reverts commit 6ed8fd3a7144f54a165a0262849254b58d734603.

--- a/default.env
+++ b/default.env
@@ -193,15 +193,14 @@ EL_NODE=http://execution:8551
 CL_NODE=http://consensus:5052
 # Used by "ethd keys", adjust this if you have multiple Eth Docker stacks connected to the same Docker bridge network
 VC_ALIAS=vc
-# For a Vero N of M, set aliases for CL, EL, MEV and Web3signer to distinguish the different stacks, by replacing the entire alias
-# or by replacing just "uniqueprefix"
-W3S_ALIAS=uniqueprefix-web3signer
-PG_ALIAS=uniqueprefix-postgres
-CL_ALIAS=uniqeprefix-consensus
-EL_ALIAS=uniqueprefix-execution
-MEV_ALIAS=uniqueprefix-mev
-# MEV-boost address. This would be changed for commit boost and Vouch setups
-MEV_NODE=http://mev-boost:18550
+# For a Vero N of M, set aliases for CL, EL, MEV and Web3signer to distinguish the different stacks
+W3S_ALIAS=${NETWORK}-web3signer
+PG_ALIAS=${NETWORK}-postgres
+CL_ALIAS=${NETWORK}-consensus
+EL_ALIAS=${NETWORK}-execution
+MEV_ALIAS=${NETWORK}-mev
+# MEV-boost address. This would only be changed for Vouch setups
+MEV_NODE=http://${MEV_ALIAS}:18550
 # Web3signer address - match service name or alias, or it can be remote
 W3S_NODE=http://web3signer:9000
 # Consensus client addresses for Charon in Obol setup
