--- a/mev-boost.yml
+++ b/mev-boost.yml
@@ -22,7 +22,7 @@ services:
     networks:
       default:
         aliases:
-          - ${MEV_ALIAS:-${NETWORK}-mev} # This allows multiple Eth Docker stacks all connected to the same bridge network
+          - ${MEV_ALIAS:-default-mev}  # This allows multiple Eth Docker stacks all connected to the same bridge network
     entrypoint:
       - /app/mev-boost
       - -addr
