--- a/teku-vc-only.yml
+++ b/teku-vc-only.yml
@@ -36,12 +36,12 @@ services:
       - WEB3SIGNER=${WEB3SIGNER:-false}
       - W3S_NODE=${W3S_NODE}
       - NETWORK=${NETWORK}
-      - VC_ALIAS=${VC_ALIAS}
+      - VC_ALIAS=${VC_ALIAS:-vc}
       - ENABLE_DIST_ATTESTATION_AGGR=${ENABLE_DIST_ATTESTATION_AGGR:-false}
     networks:
       default:
         aliases:
-          - ${VC_ALIAS}
+          - ${VC_ALIAS:-vc}
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -114,7 +114,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/teku/validator/key-manager/validator-api-bearer
-      - ${VC_ALIAS}
+      - ${VC_ALIAS:-vc}
 
 volumes:
   teku-data:
