ethd config offers Nimbus EL on testnet

--- a/default.env
+++ b/default.env
@@ -176,6 +176,7 @@ CL_ARCHIVE_NODE=false
 # CL_ARCHIVE_NODE must be false for this to take effect
 CL_MINIMAL_NODE=true
 # Set this to true to sync a node that does not carry all historical data, see EIP-4444
+# Only meaningful for mainnet and sepolia, may fail on hoodi
 # EL_ARCHIVE_NODE must be false for this to take effect
 EL_MINIMAL_NODE=false
 
@@ -358,9 +359,9 @@ GETH_DOCKERFILE=Dockerfile.binary
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 NIMEL_SRC_BUILD_TARGET=master
 NIMEL_SRC_REPO=https://github.com/status-im/nimbus-eth1
-NIMEL_DOCKER_TAG=multiarch-latest
+NIMEL_DOCKER_TAG=master
 NIMEL_DOCKER_REPO=statusim/nimbus-eth1
-NIMEL_DOCKERFILE=Dockerfile.source
+NIMEL_DOCKERFILE=Dockerfile.binary
 
 # Reth
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
