Add Nimbus Fluffy

--- a/nimbus-el.yml
+++ b/nimbus-el.yml
@@ -30,6 +30,8 @@ services:
       - NETWORK=${NETWORK}
       - ERA1_URL=${ERA1_URL:-}
       - ERA_URL=${ERA_URL:-}
+      - PORTAL_NODE=${PORTAL_NODE}
+      - PORTAL=${PORTAL:-false}
     volumes:
       - nimbus-el-data:/var/lib/nimbus
       - /etc/localtime:/etc/localtime:ro
