--- a/default.env
+++ b/default.env
@@ -25,6 +25,8 @@ NETWORK=hoodi
 # CL rapid sync via initial state/checkpoint. Please use one from https://eth-clients.github.io/checkpoint-sync-endpoints/
 # Alternatively, use an already synced CL that you trust. No trailing / for Teku, please.
 CHECKPOINT_SYNC_URL=https://hoodi.beaconstate.info
+# Whether to use a Portal client, for ELs that support this. Also add one to COMPOSE_FILE, e.g. :fluffy.yml
+PORTAL=false
 # Doppelganger protection - set to "true" to enable. This will intentionally skip two epochs on client start, and attempt to
 # detect duplicates of the validator(s) already running. Note this is NOT foolproof, though it can be useful when moving a node
 DOPPELGANGER=false
@@ -110,6 +112,8 @@ PRYSM_UDP_PORT=9000
 CL_QUIC_PORT=9001
 # Some clients need a separate port for IPv6
 CL_IPV6_P2P_PORT=9010
+# P2P Port for the Portal client, UDP only
+PORTAL_P2P_PORT=9009
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
 # Local Siren UI port
@@ -129,6 +133,9 @@ EL_RPC_PORT=8545
 # Note that for Erigon, this needs to match EL_RPC_PORT *if* you use traefik, and only then
 # Do not change it for Erigon and el-shared.yml
 EL_WS_PORT=8546
+# Portal client RPC and WS ports, only relevant when using portal-shared.yml
+PORTAL_RPC_PORT=8545
+PORTAL_WS_PORT=8546
 # Erigon's torrent port. Don't make this 42070, as it will fail
 ERIGON_TORRENT_PORT=42069
 # Erigon's third P2P port
@@ -199,6 +206,8 @@ EL_NODE=http://execution:8551
 # Consensus client address. This could be comma-separated for Lighthouse, Nimbus or Teku VC clients, with failover,
 # or could just be a remote consensus client URL for "validator only" setups.
 CL_NODE=http://consensus:5052
+# Portal client address
+PORTAL_NODE=http://portal:${PORTAL_RPC_PORT}
 # Used by "ethd keys", adjust this if you have multiple Eth Docker stacks connected to the same Docker bridge network
 VC_ALIAS=vc
 # For a Vero N of M, set aliases for CL, EL, MEV and Web3signer to distinguish the different stacks
@@ -207,6 +216,7 @@ PG_ALIAS=${NETWORK}-postgres
 CL_ALIAS=${NETWORK}-consensus
 EL_ALIAS=${NETWORK}-execution
 MEV_ALIAS=${NETWORK}-mev
+PORTAL_ALIAS=${NETWORK}-portal
 # MEV-boost address. This would only be changed for Vouch setups
 MEV_NODE=http://${MEV_ALIAS}:18550
 # Web3signer address - match service name or alias, or it can be remote
@@ -370,6 +380,14 @@ NIMEL_DOCKER_TAG=master
 NIMEL_DOCKER_REPO=statusim/nimbus-eth1
 NIMEL_DOCKERFILE=Dockerfile.binary
 
+# Nimbus Fluffy
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
+FLUFFY_SRC_BUILD_TARGET=master
+FLUFFY_SRC_REPO=https://github.com/status-im/nimbus-eth1
+FLUFFY_DOCKER_TAG=amd64-master-latest
+FLUFFY_DOCKER_REPO=statusim/nimbus-fluffy
+FLUFFY_DOCKERFILE=Dockerfile.binary
+
 # Reth
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 RETH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
@@ -396,4 +414,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=35
+ENV_VERSION=36
