--- a/nimbus-el.yml
+++ b/nimbus-el.yml
@@ -62,30 +62,11 @@ services:
       - --max-peers=${EL_MAX_PEER_COUNT:-25}
       - --log-level=${LOG_LEVEL}
     labels:
-      - traefik.enable=true
-      - traefik.http.routers.${EL_HOST:-el}.service=${EL_HOST:-el}
-      - traefik.http.routers.${EL_HOST:-el}.entrypoints=websecure
-      - traefik.http.routers.${EL_HOST:-el}.rule=Host(`${EL_HOST:-el}.${DOMAIN}`)
-      - traefik.http.routers.${EL_HOST:-el}.tls.certresolver=letsencrypt
-      - traefik.http.routers.${EL_HOST:-el}lb.service=${EL_HOST:-el}
-      - traefik.http.routers.${EL_HOST:-el}lb.entrypoints=websecure
-      - traefik.http.routers.${EL_HOST:-el}lb.rule=Host(`${EL_LB:-el-lb}.${DOMAIN}`)
-      - traefik.http.routers.${EL_HOST:-el}lb.tls.certresolver=letsencrypt
-      - traefik.http.services.${EL_HOST:-el}.loadbalancer.server.port=${EL_RPC_PORT:-8545}
-      - traefik.http.routers.${EL_WS_HOST:-elws}.service=${EL_WS_HOST:-elws}
-      - traefik.http.routers.${EL_WS_HOST:-elws}.entrypoints=websecure
-      - traefik.http.routers.${EL_WS_HOST:-elws}.rule=Host(`${EL_WS_HOST:-elws}.${DOMAIN}`)
-      - traefik.http.routers.${EL_WS_HOST:-elws}.tls.certresolver=letsencrypt
-      - traefik.http.routers.${EL_WS_HOST:-elws}lb.service=${EL_WS_HOST:-elws}
-      - traefik.http.routers.${EL_WS_HOST:-elws}lb.entrypoints=websecure
-      - traefik.http.routers.${EL_WS_HOST:-elws}lb.rule=Host(`${EL_WS_LB:-elws-lb}.${DOMAIN}`)
-      - traefik.http.routers.${EL_WS_HOST:-elws}lb.tls.certresolver=letsencrypt
-      - traefik.http.services.${EL_WS_HOST:-elws}.loadbalancer.server.port=${EL_WS_PORT:-8546}
-      - traefik.http.routers.${EE_HOST:-ee}.service=${EE_HOST:-ee}
-      - traefik.http.routers.${EE_HOST:-ee}.entrypoints=websecure
-      - traefik.http.routers.${EE_HOST:-ee}.rule=Host(`${EE_HOST:-ee}.${DOMAIN}`)
-      - traefik.http.routers.${EE_HOST:-ee}.tls.certresolver=letsencrypt
-      - traefik.http.services.${EE_HOST:-ee}.loadbalancer.server.port=${EE_PORT:-8551}
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=6060
+      - metrics.instance=execution
+      - metrics.network=${NETWORK}
 
 volumes:
   nimbus-el-data:
