Support era/era1 import for Nimbus EL

--- a/default.env
+++ b/default.env
@@ -179,6 +179,13 @@ CL_MINIMAL_NODE=true
 # Only meaningful for mainnet and sepolia, may fail on hoodi
 # EL_ARCHIVE_NODE must be false for this to take effect
 EL_MINIMAL_NODE=false
+# Era URLs, see https://eth-clients.github.io/history-endpoints/
+# Era1 is for pre-merge data, Era for post-merge. If these URLs are
+# not empty, an EL that supports Era import will use them when fresh syncing
+# A network with pre-merge history can import Era1 and optionally also Era; one without
+# pre-merge history (e.g. Hoodi) can import just Era
+ERA1_URL=
+ERA_URL=
 
 # If you want debug logs, set this to debug instead of info
 LOG_LEVEL=info
@@ -389,4 +396,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=34
+ENV_VERSION=35
