--- a/nimbus-el/Dockerfile.source
+++ b/nimbus-el/Dockerfile.source
@@ -21,7 +21,7 @@ ARG USER=user
 ARG UID=10001
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y --no-install-recommends \
-  ca-certificates bash tzdata librocksdb-dev \
+  ca-certificates bash tzdata librocksdb-dev curl aria2 \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
