Use curl for LH ifconfig.me

--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -28,6 +28,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   libssl-dev \
   ca-certificates \
   wget \
+  curl \
   tzdata \
   git \
   git-lfs \
