--- a/default.env
+++ b/default.env
@@ -177,6 +177,7 @@ CL_ARCHIVE_NODE=false
 CL_MINIMAL_NODE=true
 # Set this to true to sync a node that does not carry all historical data, see EIP-4444
 # Only meaningful for mainnet and sepolia, may fail on hoodi
+# Erigon also has an \"aggressive\" mode that prunes even more
 # EL_ARCHIVE_NODE must be false for this to take effect
 EL_MINIMAL_NODE=false
 # Era URLs, see https://eth-clients.github.io/history-endpoints/
@@ -396,4 +397,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=35
+ENV_VERSION=36
