--- a/grafana-rootless.yml
+++ b/grafana-rootless.yml
@@ -37,7 +37,7 @@ services:
     image: samcm/ethereum-metrics-exporter:debian-latest
     entrypoint:
       - /ethereum-metrics-exporter
-      - --consensus-url=${CL_NODE}
+      - --consensus-url=http://consensus:${CL_REST_PORT:-5052}
       - --execution-url=http://execution:${EL_RPC_PORT:-8545}
     <<: *logging
 
