Add wget to Reth so prune command works

--- a/reth/Dockerfile.source
+++ b/reth/Dockerfile.source
@@ -28,6 +28,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   gosu \
   git \
   git-lfs \
+  wget \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
