chore(env): add pruning warning and EIP-4444 data retention info

--- a/default.env
+++ b/default.env
@@ -182,10 +182,15 @@ CL_ARCHIVE_NODE=false
 # Set this to true to sync a minimal CL node - in use with Grandine and Teku, for example
 # CL_ARCHIVE_NODE must be false for this to take effect
 CL_MINIMAL_NODE=true
-# Set this to true to sync a node that does not carry all historical data, see EIP-4444
+# Set this to true to sync a node that does not carry more than 1 year of historical data, see EIP-4444
 # Only meaningful for mainnet and sepolia, may fail on hoodi
 # Erigon also has an \"aggressive\" mode that prunes even more
 # EL_ARCHIVE_NODE must be false for this to take effect
+# ⚠️ WARNING:
+# - Historical data older than 1 year will be deleted.
+# - Pruning can take 2 to 10 hours depending on hardware.
+# - Requires at least 50GB of free disk space.
+# - During pruning, the node cannot validate unless a fallback is configured.
 EL_MINIMAL_NODE=false
 # Era URLs, see https://eth-clients.github.io/history-endpoints/
 # Era1 is for pre-merge data, Era for post-merge. If these URLs are
