--- a/default.env
+++ b/default.env
@@ -183,10 +183,10 @@ CL_ARCHIVE_NODE=false
 # CL_ARCHIVE_NODE must be false for this to take effect
 CL_MINIMAL_NODE=true
 # Set this to true to sync a node that does not carry more than 1 year of historical data, see EIP-4444
-# Only meaningful for mainnet and sepolia, may fail on hoodi
-# Erigon also has an \"aggressive\" mode that prunes even more
-# EL_ARCHIVE_NODE must be false for this to take effect
 # ⚠️ WARNING:
+# - Only meaningful for mainnet and sepolia, may fail on hoodi
+# - Erigon also has an \"aggressive\" mode that prunes even more
+# - EL_ARCHIVE_NODE must be false for this to take effect
 # - Historical data older than 1 year will be deleted.
 # - Pruning can take 2 to 10 hours depending on hardware.
 # - Requires at least 50GB of free disk space.
