fix: Set Lido oracle allowlist and locator address to default to Hoodi in `lido-obol.yml`, replacing Holesky

--- a/lido-obol.yml
+++ b/lido-obol.yml
@@ -70,10 +70,10 @@ services:
    environment:
      -  EXECUTION_NODE=${OBOL_EL_NODE:-http://execution:8545}
      -  CONSENSUS_NODE=${OBOL_CL_NODE:-http://consensus:5052}
-     -  LOCATOR_ADDRESS=${VE_LOCATOR_ADDRESS:-0x28FAB2059C713A7F9D8c86Db49f9bb0e96Af1ef8}
+     -  LOCATOR_ADDRESS=${VE_LOCATOR_ADDRESS:-0xe2EF9536DAAAEBFf5b1c130957AB3E80056b06D8}
      -  STAKING_MODULE_ID=${VE_STAKING_MODULE_ID:-2}
      -  OPERATOR_ID=${VE_OPERATOR_ID}
-     -  ORACLE_ADDRESSES_ALLOWLIST=${VE_ORACLE_ADDRESSES_ALLOWLIST:-["0x140Bd8FbDc884f48dA7cb1c09bE8A2fAdfea776E","0xA7410857ABbf75043d61ea54e07D57A6EB6EF186","0x404335BcE530400a5814375E7Ec1FB55fAff3eA2","0x946D3b081ed19173dC83Cd974fC69e1e760B7d78","0x007DE4a5F7bc37E2F26c0cb2E8A95006EE9B89b5","0xe57B3792aDCc5da47EF4fF588883F0ee0c9835C9","0x61c91ECd902EB56e314bB2D5c5C07785444Ea1c8","0x73181107c8D9ED4ce0bbeF7A0b4ccf3320C41d12","0xc79F702202E3A6B0B6310B537E786B9ACAA19BAf"]}
+     -  ORACLE_ADDRESSES_ALLOWLIST=${VE_ORACLE_ADDRESSES_ALLOWLIST:-["0xcA80ee7313A315879f326105134F938676Cfd7a9","0xf03B8DC8762B97F13Ac82e6F94bE3Ed002FF7459","0x1932f53B1457a5987791a40Ba91f71c5Efd5788F","0xf7aE520e99ed3C41180B5E12681d31Aa7302E4e5","0x99B2B75F490fFC9A29E4E1f5987BE8e30E690aDF","0x219743f1911d84B32599BdC2Df21fC8Dba6F81a2","0xD3b1e36A372Ca250eefF61f90E833Ca070559970","0x4c75FA734a39f3a21C57e583c1c29942F021C6B7","0xB1cC91878c1831893D39C2Bb0988404ca5Fa7918","0xfe43A8B0b481Ae9fB1862d31826532047d2d538c","0x43C45C2455C49eed320F463fF4f1Ece3D2BF5aE2"]}
      -  MESSAGES_LOCATION=/exitmessages
      -  RUN_METRICS=true
      -  HTTP_PORT=8989
