Lodestar can prune its database

--- a/lodestar-cl-only.yml
+++ b/lodestar-cl-only.yml
@@ -37,6 +37,7 @@ services:
       - BEACON_STATS_MACHINE=${BEACON_STATS_MACHINE}
       - CL_EXTRAS=${CL_EXTRAS:-}
       - ARCHIVE_NODE=${CL_ARCHIVE_NODE:-}
+      - MINIMAL_NODE=${CL_MINIMAL_NODE:-}
       - NETWORK=${NETWORK}
       - IPV6=${IPV6:-false}
       - CL_IPV6_P2P_PORT=${CL_IPV6_P2P_PORT:-9090}
